--- a/Droid_2048/Resources/layout/Main.axml
+++ b/Droid_2048/Resources/layout/Main.axml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:rowCount="2"
+    android:rowCount="3"
     android:columnCount="2">
     <TextView
         android:layout_row="0"
@@ -14,14 +14,33 @@
         android:text="Score"
         android:layout_gravity="fill_horizontal"
         android:minWidth="100dp" />
+    <TextView
+        android:layout_row="0"
+        android:layout_rowSpan="1"
+        android:layout_column="1"
+        android:layout_columnSpan="1"
+        android:id="@+id/best"
+        android:text="best"
+        android:layout_gravity="fill_horizontal"
+        android:minWidth="100dp" />
     <Button
         android:id="@+id/reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/reset"
-        android:layout_row="0"
+        android:layout_row="2"
         android:layout_rowSpan="1"
         android:layout_column="1"
+        android:layout_columnSpan="1"
+        android:layout_gravity="center_horizontal" />
+    <Button
+        android:id="@+id/test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/test"
+        android:layout_row="2"
+        android:layout_rowSpan="1"
+        android:layout_column="0"
         android:layout_columnSpan="1"
         android:layout_gravity="center_horizontal" />
     <TextView
